# soil1.3_biofilm

./: ImageProcessing.py  PostAnalysis.py  PostAnalysis.qmd  PostAnalysis_with_outlier.py  README.md  RawImageProcessing.py  RawImageProcessingDev.py  main.py  notes.md  pyproject.toml
