[project]
name = "biofilm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dfply>=0.3.3",
    "jupyterlab>=4.5.3",
    "kaleido>=1.2.0",
    "multipagetiff>=3.0.9",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pingouin>=0.5.5",
    "plotly>=6.5.2",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "statannotations>=0.7.2",
    "tifffile>=2026.1.28",
]
